<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.okashitech.githubkotlinlist.presentation.list.GithubListFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_github_list">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.okashitech.githubkotlinlist.presentation.details.DetailsFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_details">
        <argument
            android:name="@string/web_view_nav_params"
            app:argType="com.okashitech.githubkotlinlist.presentation.details.WebNavArgs" />
    </fragment>
</navigation>


