<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootViewResource"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    android:clickable="true"
    android:focusable="true"
    tools:visibility="visible">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/errorTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="21sp"
        app:layout_constraintBottom_toTopOf="@id/errorLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/opa" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/errorLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_horizontal"
        android:padding="@dimen/margin_horizontal"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lineHeight="18dp"
        tools:text="@string/no_internet_connection" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/tryAgainButton"
        style="@style/ButtonStyle"
        android:layout_margin="@dimen/margin_horizontal"
        android:enabled="true"
        android:text="@string/try_again"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/errorLabel"
        tools:enabled="true" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/errorGroup"
        app:constraint_referenced_ids="tryAgainButton, errorLabel, errorTitle"
        android:visibility="invisible"
        android:layout_width="0dp"
        android:layout_height="0dp"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>